@@ -1,30 +1,23 @@
 {
-  "timestamp" : "2022-05-12T16:39:39Z",
-  "count_outdated" : 22,
-  "uniques_outdated" : 5,
+  "timestamp" : "2022-05-21T01:39:24Z",
+  "count_outdated" : 23,
+  "uniques_outdated" : 6,
   "count" : 28,
   "uniques" : 8,
   "views" : [
     {
-      "timestamp": "2022-05-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "timestamp": "2022-05-07T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
     {
-      "timestamp": "2022-05-07T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 0, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
-    {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
